Better templating for players

--- a/party/gerbert_greystone.html
+++ b/party/gerbert_greystone.html
@@ -1,9 +1,9 @@
 ---
-layout: default
-title: 
+layout: pc
+title: Gerbert Greystone
+pc_name: Gerbert Greystone
+pc_level: 6
+pc_class: Druid
+pc_race: Elf
+pc_player: Marty
 ---
-
-<div id="home">
-  <h1></h1>
-  <h2></h2>
-</div>
