--- a/party/jeff_warlock.html
+++ b/party/jeff_warlock.html
@@ -1,9 +1,9 @@
 ---
-layout: default
-title: 
+layout: pc
+title: Jeff's Warlock
+pc_name: Jeff
+pc_level: 6
+pc_class: Warlock
+pc_race: Goblin
+pc_player: Jeff
 ---
-
-<div id="home">
-  <h1></h1>
-  <h2></h2>
-</div>
