--- a/party/krusk.html
+++ b/party/krusk.html
@@ -1,9 +1,9 @@
 ---
-layout: default
-title: 
+layout: pc
+title: "Skytalon" Krusk of Darkfeather
+pc_name: "Skytalon" Krusk of Darkfeather
+pc_level: 6
+pc_class: Barbarian
+pc_race: Half Orc
+pc_player: David
 ---
-
-<div id="home">
-  <h1></h1>
-  <h2></h2>
-</div>
