--- a/party/mr_fabulous.html
+++ b/party/mr_fabulous.html
@@ -1,9 +1,9 @@
 ---
-layout: default
-title: 
+layout: pc
+title: Mr. Fabulous
+pc_name: Mr. Fabulous
+pc_level: 6
+pc_class: Rogue
+pc_race: Halfling
+pc_player: Andrew
 ---
-
-<div id="home">
-  <h1></h1>
-  <h2></h2>
-</div>
