--- a/party/stormy_skye.html
+++ b/party/stormy_skye.html
@@ -1,9 +1,9 @@
 ---
-layout: default
-title: 
+layout: pc
+title: Stormy Skye
+pc_name: Stormy Skye
+pc_level: 6
+pc_class: Fighter
+pc_race: Elf
+pc_player: Krystal
 ---
-
-<div id="home">
-  <h1></h1>
-  <h2></h2>
-</div>
