--- a/party/zevy.html
+++ b/party/zevy.html
@@ -1,9 +1,9 @@
 ---
-layout: default
-title: 
+layout: pc
+title: Zevy
+pc_name: Zevy
+pc_level: 6
+pc_class: Fighter
+pc_race: Dwarf
+pc_player: Ben
 ---
-
-<div id="home">
-  <h1></h1>
-  <h2></h2>
-</div>
