--- a/party/killian_gerlach.html
+++ b/party/killian_gerlach.html
@@ -1,9 +1,9 @@
 ---
-layout: default
-title: 
+layout: pc
+title: Killian Gerlach
+pc_name: Killian Gerlach
+pc_level: 6
+pc_class: Wizard 5 / Knight Phantom 1
+pc_race: Human
+pc_player: Brad
 ---
-
-<div id="home">
-  <h1></h1>
-  <h2></h2>
-</div>
