--- a/party/oren_rocknocker.html
+++ b/party/oren_rocknocker.html
@@ -1,9 +1,9 @@
 ---
-layout: default
-title: 
+layout: pc
+title: Oren RocKnocker
+pc_name: Oren RocKnocker
+pc_level: 6
+pc_class: Cleric
+pc_race: Dwarf
+pc_player: Mike
 ---
-
-<div id="home">
-  <h1></h1>
-  <h2></h2>
-</div>
