Significant updating including first game session

--- a/party/jeff_warlock.html
+++ b/party/jeff_warlock.html
@@ -1,8 +1,8 @@
 ---
 layout: pc
-title: Jeff's Warlock
-pc_name: Jeff
-pc_level: 6
+title: Jeff the Warlock
+pc_name: Jeff the Warlock
+pc_level: 7
 pc_class: Warlock
 pc_race: Goblin
 pc_player: Jeff
