--- a/party/krusk.html
+++ b/party/krusk.html
@@ -1,7 +1,7 @@
 ---
 layout: pc
-title: "Skytalon" Krusk of Darkfeather
-pc_name: "Skytalon" Krusk of Darkfeather
+title: '"Skytalon" Krusk of Darkfeather'
+pc_name: '"Skytalon" Krusk of Darkfeather'
 pc_level: 6
 pc_class: Barbarian
 pc_race: Half Orc
