Updating absolute paths for GH Pages

--- a/party/index.html
+++ b/party/index.html
@@ -6,13 +6,13 @@ title: Party
 <div id="home">
   <h1>The Party</h1>
   <ul>
-      <li><a href="/party/killian_gerlach.html">Killian Gerlach</a> - Human - Level 5 Wizard / Level 1 Knight Phantom (Brad)</li>
-      <li><a href="/party/oren_rocknocker.html">Oren RocKnocker</a> - Dwarf - Level 6 Cleric (Mike)</li>
-      <li><a href="/party/jeff_warlock.html">Jeff</a> - Goblin - Level 6 Warlock (Jeff)</li>
-      <li><a href="/party/mr_fabulous.html">Mr. Fabulous</a> - Halfling - Level 6 Rogue (Andrew)</li>
-      <li><a href="/party/stormy_skye.html">Stormy Skye</a> - Elf - Level 6 Fighter (Krystal)</li>
-      <li><a href="/party/zevy.html">Zevy</a> - Dwarf - Level 6 Fighter (Ben)</li>
-      <li><a href="/party/gerbert_greystone.html">Gerbert Greystone</a> - Elf - Level 6 Druid (Marty)</li>
-      <li><a href="/party/krusk.html">"SkyTalon" Krusk of Darkfeather</a> - Half Orc - Level 6 Barbarian (David)</li>
+      <li><a href="{{ site.baseurl }}/party/killian_gerlach.html">Killian Gerlach</a> - Human - Level 5 Wizard / Level 1 Knight Phantom (Brad)</li>
+      <li><a href="{{ site.baseurl }}/party/oren_rocknocker.html">Oren RocKnocker</a> - Dwarf - Level 6 Cleric (Mike)</li>
+      <li><a href="{{ site.baseurl }}/party/jeff_warlock.html">Jeff</a> - Goblin - Level 6 Warlock (Jeff)</li>
+      <li><a href="{{ site.baseurl }}/party/mr_fabulous.html">Mr. Fabulous</a> - Halfling - Level 6 Rogue (Andrew)</li>
+      <li><a href="{{ site.baseurl }}/party/stormy_skye.html">Stormy Skye</a> - Elf - Level 6 Fighter (Krystal)</li>
+      <li><a href="{{ site.baseurl }}/party/zevy.html">Zevy</a> - Dwarf - Level 6 Fighter (Ben)</li>
+      <li><a href="{{ site.baseurl }}/party/gerbert_greystone.html">Gerbert Greystone</a> - Elf - Level 6 Druid (Marty)</li>
+      <li><a href="{{ site.baseurl }}/party/krusk.html">"SkyTalon" Krusk of Darkfeather</a> - Half Orc - Level 6 Barbarian (David)</li>
   </ul>
 </div>
