Linking to the PC's from the post

--- a/party/index.html
+++ b/party/index.html
@@ -5,14 +5,22 @@ title: Party
 
 <div id="home">
   <h1>The Party</h1>
+  <h2>Active</h2>
   <ul>
-      <li><a href="{{ site.baseurl }}/party/killian_gerlach.html">Killian Gerlach</a> - Human - Level 5 Wizard / Level 1 Knight Phantom (Brad)</li>
-      <li><a href="{{ site.baseurl }}/party/oren_rocknocker.html">Oren RocKnocker</a> - Dwarf - Level 6 Cleric (Mike)</li>
-      <li><a href="{{ site.baseurl }}/party/jeff_warlock.html">Jeff</a> - Goblin - Level 6 Warlock (Jeff)</li>
-      <li><a href="{{ site.baseurl }}/party/mr_fabulous.html">Mr. Fabulous</a> - Halfling - Level 6 Rogue (Andrew)</li>
-      <li><a href="{{ site.baseurl }}/party/stormy_skye.html">Stormy Skye</a> - Elf - Level 6 Fighter (Krystal)</li>
+      <li><a href="{{ site.baseurl }}/party/killian_gerlach.html">Killian Gerlach</a> - Human - Level 5 Wizard / Level 2 Knight Phantom (Brad)</li>
+      <li><a href="{{ site.baseurl }}/party/oren_rocknocker.html">Oren RocKnocker</a> - Dwarf - Level 7 Cleric (Mike)</li>
+      <li><a href="{{ site.baseurl }}/party/jeff_warlock.html">Jeff</a> - Goblin - Level 7 Warlock (Jeff)</li>
+      <li><a href="{{ site.baseurl }}/party/mr_fabulous.html">Mr. Fabulous</a> - Halfling - Level 7 Rogue (Andrew)</li>
+      <li><a href="{{ site.baseurl }}/party/stormy_skye.html">Stormy Skye</a> - Elf - Level 7 Fighter (Krystal)</li>
       <li><a href="{{ site.baseurl }}/party/zevy.html">Zevy</a> - Dwarf - Level 6 Fighter (Ben)</li>
       <li><a href="{{ site.baseurl }}/party/gerbert_greystone.html">Gerbert Greystone</a> - Elf - Level 6 Druid (Marty)</li>
+  </ul>
+  <h2>Inactive</h2>
+  <ul>
       <li><a href="{{ site.baseurl }}/party/krusk.html">"SkyTalon" Krusk of Darkfeather</a> - Half Orc - Level 6 Barbarian (David)</li>
+  </ul>
+  <h2>Deceased</h2>
+  <ul>
+      <li><a href="{{ site.baseurl }}/party/tim.html">Tim the Warmage</a> - Human - Level 6 Warmage (Tim)</li>
   </ul>
 </div>
