Adding Oren's story

--- a/party/index.html
+++ b/party/index.html
@@ -8,7 +8,7 @@ title: Party
   <h2>Active</h2>
   <ul>
       <li><a href="{{ site.baseurl }}/party/killian_gerlach.html">Killian Gerlach</a> - Human - Level 5 Wizard / Level 2 Knight Phantom (Brad)</li>
-      <li><a href="{{ site.baseurl }}/party/oren_rocknocker.html">Oren RocKnocker</a> - Dwarf - Level 7 Cleric (Mike)</li>
+      <li><a href="{{ site.baseurl }}/party/oren_rocknocker.html">Oren Rocknocker</a> - Dwarf - Level 7 Cleric (Mike)</li>
       <li><a href="{{ site.baseurl }}/party/jeff_warlock.html">Jeff</a> - Goblin - Level 7 Warlock (Jeff)</li>
       <li><a href="{{ site.baseurl }}/party/mr_fabulous.html">Mr. Fabulous</a> - Halfling - Level 7 Rogue (Andrew)</li>
       <li><a href="{{ site.baseurl }}/party/stormy_skye.html">Stormy Skye</a> - Elf - Level 7 Fighter (Krystal)</li>
