--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@ title: Campaign Journal
 ---
 
 <div id="home">
+  <h1>Welcome</h1>
+  <p>
+    This is my site to keep track of a Red Hand of Doom D&amp;D 3.5 campaign.
+  </p>
   <h1>Game Sessions</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+      <li>
+          <span class="date">{{ post.date | date_to_string }}</span>
+          &raquo;
+          <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+      </li>
     {% endfor %}
   </ul>
 </div>
